[project]
name = "ex4nicegui"
version = "0.9.3"
description = "Extension library based on nicegui, providing data responsive,BI functionality modules."
keywords = ["ui", "gui", "web","nicegui", "ex4nicegui", "webui"]
Repository = "https://github.com/CrystalWindSnake/ex4nicegui"
Issues = "https://github.com/CrystalWindSnake/ex4nicegui/issues"
authors = [
    {name = "CrystalWindSnake",email = "568166495@qq.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "nicegui~=3.5",
    "signe~=0.4.22",
    "executing~=2.0.1",
]


[dependency-groups]
dev = [
    "pytest~=8.3.3",
    "playwright==1.48.0",
    "pytest~=8.3.5",
    "pytest-asyncio~=0.24.0",
    "pytest-playwright~=0.7.1",
    "pandas>=2.3.3",
    "pyecharts>=2.0.8",
]
git = [
    "pre-commit>=3.5.0",
]
lint = [
    "ruff==0.12.2",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.sdist]
only-include = ["ex4nicegui"]

[tool.hatch.build.targets.wheel]
packages = ["ex4nicegui"]
